Fix bug: mouse events not working due to z-index on library grid

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,14 +17,144 @@ body {
     height: 100%;
 }
 
+.navbar {
+    position: relative;
+    width: 100vw;
+    height: var(--nav-height);
+    background-color: #D7F1FF;
+}
+
+.library-grid {
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(176px, 200px));
+    grid-gap: 1.3em 1.7em;
+
+    width: 100vw;
+    min-height: calc(100% - var(--nav-height));
+    background-color: #FCF6F5;
+
+    padding: 50px 100px;
+}
+
+.book {
+    /*width: clamp(200px, 25%, 278px);*/
+    height: 250px;
+
+    border: 1px solid rgba(0, 0, 0, 0.35);
+    border-radius: 50px;
+
+    background-color: #FCFCFC;
+    box-shadow: 4px 6px 2px rgba(0, 0, 0, 0.25);
+
+    font-family: Roboto, sans-serif;
+    
+    transition: transform 0.2s;
+}
+
+.book:hover {
+    transform: scale(1.05);
+}
+
+.add-book {
+    border: 1px dashed #000000;
+    background: rgba(255, 255, 255, 0.13);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 24px;
+}
+
+.rotate-icon {
+    transform: rotate(20deg);
+}
+
+
+.book-info-container {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: 30px 20px;
+
+    text-align: center;
+}
+
+.title {
+    font-size: 1em;
+    font-style: italic;
+    font-weight: 300;
+    line-height: 1.25em;
+}
+
+.author {
+    font-size: 1em;
+    font-style: normal;
+    font-weight: 100;
+}
+
+.pages {
+    font-size: 0.875em;
+    font-weight: 100;
+}
+
+.button-container {
+    width: 100%;
+    height: 10%;
+    display: flex;
+    justify-content: space-between;
+
+    padding: 0 0.8em;
+
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+    opacity: 0;
+    visibility: hidden;
+}
+
+.material-icons {
+    font-size: 1.8em;
+    transition: transform 0.2s;
+}
+
+.visible {
+    opacity: 1;
+    visibility: visible;
+}
+
+.material-icons:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+}
+
+.done-icon {
+    color: #B2B2B2;
+}
+
+.done-icon.done-read {
+    color: green;
+
+}
+
+
+/*      form rules    */
+
 .add-book-background {
     position: relative;
     width: 100vw;
     height: 100vh;
     bottom: 100vh;
     background: rgba(196, 196, 196, 0.5);
-    /*display: none;*/
-    display: flex;
+    display: none;
+    /*display: flex;*/
     justify-content: center;
     align-items: center;
 }
@@ -45,9 +175,6 @@ body {
     font-family: Roboto, sans-serif;
     font-weight: 400;
 }
-
-
-/*      form rules    */
 
 .form-items-container {
     height: 100%;
@@ -109,130 +236,4 @@ input[name="pages"] {
 
 
 
-.navbar {
-    position: relative;
-    width: 100vw;
-    height: var(--nav-height);
-    background-color: #D7F1FF;
-}
-
-.library-grid {
-    position: relative;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(176px, 200px));
-    grid-gap: 1.3em 1.7em;
-
-    width: 100vw;
-    min-height: calc(100% - var(--nav-height));
-    background-color: #FCF6F5;
-
-    padding: 50px 100px;
-    z-index: -1;
-}
-
-.book {
-    /*width: clamp(200px, 25%, 278px);*/
-    height: 250px;
-
-    border: 1px solid rgba(0, 0, 0, 0.35);
-    border-radius: 50px;
-
-    background-color: #FCFCFC;
-    box-shadow: 4px 6px 2px rgba(0, 0, 0, 0.25);
-
-    font-family: Roboto, sans-serif;
-    
-    transition: transform 0.2s;
-}
-
-.book:hover {
-    transform: scale(1.05);
-}
-
-.add-book {
-    border: 1px dashed #000000;
-    background: rgba(255, 255, 255, 0.13);
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    font-size: 24px;
-}
-
-.rotate-icon {
-    transform: rotate(20deg);
-}
-
-
-.book-info-container {
-    width: 100%;
-    height: 100%;
-
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: space-between;
-    align-items: center;
-
-    padding: 30px 20px;
-
-    text-align: center;
-}
-
-.title {
-    font-size: 1em;
-    font-style: italic;
-    font-weight: 300;
-}
-
-.author {
-    font-size: 1em;
-    font-style: normal;
-    font-weight: 100;
-}
-
-.pages {
-    font-size: 0.875em;
-    font-weight: 100;
-}
-
-.button-container {
-    width: 100%;
-    height: 10%;
-    display: flex;
-    justify-content: space-between;
-
-    padding: 0 0.8em;
-
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-
-    opacity: 0;
-    visibility: hidden;
-}
-
-.material-icons {
-    font-size: 1.8em;
-    transition: transform 0.2s;
-}
-
-.visible {
-    opacity: 1;
-    visibility: visible;
-}
-
-.material-icons:hover {
-    cursor: pointer;
-    transform: scale(1.1);
-}
-
-.done-icon {
-    color: #B2B2B2;
-}
-
-.done-icon.done-read {
-    color: green;
-
-}
 
